--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -8,7 +8,7 @@
 
 component.name           = bio-formats
 component.jar            = bio-formats.jar
-component.version        = 4.3.1-DEV
+component.version        = 4.3.1
 component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/lwf-stubs.jar:\
