--- a/components/ome-plugins/src/plugins.config
+++ b/components/ome-plugins/src/plugins.config
@@ -20,7 +20,11 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-Plugins>OME, "Download from OMERO", loci.plugins.LociImporter("location=[OMERO]")
-Plugins>OME, "Upload to OME", loci.plugins.ome.LociUploader("")
+# NB: plugins are temporarily commented out, pending open security issues:
+# http://trac.openmicroscopy.org/ome/ticket/6696
+# http://trac.openmicroscopy.org/ome/ticket/6697
+
+#Plugins>OME, "Download from OMERO", loci.plugins.LociImporter("location=[OMERO]")
+#Plugins>OME, "Upload to OME", loci.plugins.ome.LociUploader("")
 
 Help>About Plugins, "OME Plugins...", loci.plugins.ome.About("")
