--- a/components/ome-plugins/src/plugins.config
+++ b/components/ome-plugins/src/plugins.config
@@ -24,7 +24,7 @@
 # http://trac.openmicroscopy.org/ome/ticket/6696
 # http://trac.openmicroscopy.org/ome/ticket/6697
 
-#Plugins>OME, "Download from OMERO", loci.plugins.LociImporter("location=[OMERO]")
+Plugins>OME, "Download from OMERO", loci.plugins.LociImporter("location=[OMERO]")
 #Plugins>OME, "Upload to OME", loci.plugins.ome.LociUploader("")
 
 Help>About Plugins, "OME Plugins...", loci.plugins.ome.About("")
