--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -17,6 +17,7 @@ component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
