--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -45,6 +45,7 @@ component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/poi-loci.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
@@ -54,13 +55,11 @@ component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
 # Used by TestNG suite that tests the absence of classes from mdbtools-java.jar
 component.cp.no-mdb      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/loci-common.jar:\
-<<<<<<< HEAD
                            ${artifact.dir}/metakit.jar:\
-=======
                            ${artifact.dir}/loci-io-image.jar:\
->>>>>>> bf-split
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
@@ -76,6 +75,7 @@ component.cp.no-poi      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
@@ -91,6 +91,7 @@ component.cp.no-netcdf   = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
@@ -104,6 +105,7 @@ component.cp.no-jai      = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
@@ -117,6 +119,7 @@ component.cp.no-lurawave = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
