--- a/components/bio-formats/build.xml
+++ b/components/bio-formats/build.xml
@@ -13,7 +13,7 @@ Type "ant -p" for a list of targets.
   <property file="build.properties"/>
 
   <target name="test" depends="jar,compile-tests,test-no-mdb,test-no-netcdf,
-    test-no-ome-xml, test-no-poi,test-no-jai,test-no-lurawave"
+    test-no-poi"
     description="run tests">
     <!-- NOTE: Overrides default "test" target from java.xml -->
     <copy tofile="${build.dir}/testng.xml" overwrite="true"
@@ -26,7 +26,6 @@ Type "ant -p" for a list of targets.
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
-      <jvmarg value="-Dlurawave.license=XXX"/>
     </testng>
   </target>
 
@@ -62,22 +61,6 @@ Type "ant -p" for a list of targets.
     <fail if="failedTest"/>
   </target>
 
-  <target name="test-no-ome-xml" depends="compile-tests"
-    description="run missing OME-XML JAR tests" if="doTests">
-    <copy tofile="${build.dir}/testng.xml" overwrite="true"
-      file="${tests.dir}/loci/formats/utests/testng-no-ome-xml.xml"/>
-    <testng failureProperty="failedTest">
-      <classpath>
-        <pathelement location="${test-classes.dir}"/>
-        <pathelement location="${classes.dir}"/>
-        <pathelement path="${component.cp.no-xml}"/>
-      </classpath>
-      <xmlfileset file="${build.dir}/testng.xml"/>
-      <jvmarg value="-mx${testng.memory}"/>
-    </testng>
-    <fail if="failedTest"/>
-  </target>
-
   <target name="test-no-poi" depends="compile-tests"
     description="run missing POI JAR tests" if="doTests">
     <copy tofile="${build.dir}/testng.xml" overwrite="true"
@@ -87,38 +70,6 @@ Type "ant -p" for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.cp.no-poi}"/>
-      </classpath>
-      <xmlfileset file="${build.dir}/testng.xml"/>
-      <jvmarg value="-mx${testng.memory}"/>
-    </testng>
-    <fail if="failedTest"/>
-  </target>
-
-  <target name="test-no-jai" depends="compile-tests"
-    description="run missing JAI ImageIO JAR tests" if="doTests">
-    <copy tofile="${build.dir}/testng.xml" overwrite="true"
-      file="${tests.dir}/loci/formats/utests/testng-no-jai.xml"/>
-    <testng failureProperty="failedTest">
-      <classpath>
-        <pathelement location="${test-classes.dir}"/>
-        <pathelement location="${classes.dir}"/>
-        <pathelement path="${component.cp.no-jai}"/>
-      </classpath>
-      <xmlfileset file="${build.dir}/testng.xml"/>
-      <jvmarg value="-mx${testng.memory}"/>
-    </testng>
-    <fail if="failedTest"/>
-  </target>
-
-  <target name="test-no-lurawave" depends="compile-tests"
-    description="run missing LuraWave JAR tests" if="doTests">
-    <copy tofile="${build.dir}/testng.xml" overwrite="true"
-      file="${tests.dir}/loci/formats/utests/testng-no-lurawave.xml"/>
-    <testng failureProperty="failedTest">
-      <classpath>
-        <pathelement location="${test-classes.dir}"/>
-        <pathelement location="${classes.dir}"/>
-        <pathelement path="${component.cp.no-lurawave}"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
