--- a/components/bio-formats/build.xml
+++ b/components/bio-formats/build.xml
@@ -141,4 +141,10 @@ Type "ant -p" for a list of targets.
     <fail if="failedTest"/>
   </target>
 
+  <target name="gen-structure-table" depends="compile"
+    description="generate the dataset structure table">
+    <java classname="loci.formats.tools.MakeDatasetStructureTable"
+      args="doc/DatasetStructureTable.wiki"/>
+  </target>
+
 </project>
