--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -9,9 +9,7 @@
 component.name           = bio-formats
 component.jar            = bio-formats.jar
 component.version        = 4.4-DEV
-component.classpath      = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/loci-common.jar:\
-                           ${artifact.dir}/lwf-stubs.jar:\
+component.classpath      = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
@@ -37,8 +35,7 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/xalan-2.7.1.jar
 
 # Used by TestNG suite that tests the absence of classes from mdbtools-java.jar
-component.cp.no-mdb      = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/loci-common.jar:\
+component.cp.no-mdb      = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
@@ -51,9 +48,7 @@ component.cp.no-mdb      = ${artifact.dir}/jai_imageio.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from poi-loci.jar
-component.cp.no-poi      = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/loci-common.jar:\
-                           ${artifact.dir}/lwf-stubs.jar:\
+component.cp.no-poi      = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
@@ -66,8 +61,7 @@ component.cp.no-poi      = ${artifact.dir}/jai_imageio.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from netcdf-4.0.jar
-component.cp.no-netcdf   = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/loci-common.jar:\
+component.cp.no-netcdf   = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
