--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -9,11 +9,13 @@
 component.name           = bio-formats
 component.jar            = bio-formats.jar
 component.version        = 4.5-DEV
-component.classpath      = ${artifact.dir}/mdbtools-java.jar:\
+component.classpath      = ${artifact.dir}/loci-legacy.jar:\
+                           ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${artifact.dir}/scifio.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
