--- a/components/bio-formats/pom.xml
+++ b/components/bio-formats/pom.xml
@@ -116,7 +116,7 @@
       <id>melissa</id>
       <name>Melissa Linkert</name>
       <email>melissa.linkert@glencoesoftware.com</email>
-      <url>http://openmicroscopy.org/site/about/development-teams/glencoe-software</url>
+      <url>http://www.openmicroscopy.org/site/about/development-teams/glencoe-software</url>
       <organization>Glencoe Software</organization>
       <organizationUrl>http://glencoesoftware.com/</organizationUrl>
       <roles>
@@ -125,7 +125,7 @@
       </roles>
       <timezone>-6</timezone>
       <properties>
-        <picUrl>http://openmicroscopy.org/site/about/development-teams/glencoe-software/melissalinkert.png</picUrl>
+        <picUrl>http://www.openmicroscopy.org/site/about/development-teams/glencoe-software/melissalinkert.png</picUrl>
       </properties>
     </developer>
     <developer>
@@ -148,7 +148,7 @@
       <id>callan</id>
       <name>Chris Allan</name>
       <email>callan@lifesci.dundee.ac.uk</email>
-      <url>http://openmicroscopy.org/site/about/development-teams/jason</url>
+      <url>http://www.openmicroscopy.org/site/about/development-teams/jason</url>
       <organization>Swedlow Lab, University of Dundee</organization>
       <organizationUrl>http://www.lifesci.dundee.ac.uk/groups/jason_swedlow/</organizationUrl>
       <roles>
@@ -157,7 +157,7 @@
       </roles>
       <timezone>0</timezone>
       <properties>
-        <picUrl>http://openmicroscopy.org/site/about/development-teams/jason/chrisallan.jpg</picUrl>
+        <picUrl>http://www.openmicroscopy.org/site/about/development-teams/jason/chrisallan.jpg</picUrl>
       </properties>
     </developer>
   </developers>
@@ -174,7 +174,7 @@
     </contributor>
     <contributor>
       <name>Brian Loranger</name>
-      <url>http://openmicroscopy.org/site/about/development-teams/jason</url>
+      <url>http://www.openmicroscopy.org/site/about/development-teams/jason</url>
       <organization>Swedlow Lab, University of Dundee</organization>
       <organizationUrl>http://www.lifesci.dundee.ac.uk/groups/jason_swedlow/</organizationUrl>
       <roles>
@@ -182,7 +182,7 @@
       </roles>
       <timezone>0</timezone>
       <properties>
-        <picUrl>http://openmicroscopy.org/site/about/development-teams/jason/brian.jpg</picUrl>
+        <picUrl>http://www.openmicroscopy.org/site/about/development-teams/jason/brian.jpg</picUrl>
       </properties>
     </contributor>
     <contributor><name>Eric Albert</name></contributor>
