--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -9,8 +9,7 @@
 component.name           = bio-formats
 component.jar            = bio-formats.jar
 component.version        = 4.5-DEV
-component.classpath      = ${artifact.dir}/loci-common.jar:\
-                           ${artifact.dir}/mdbtools-java.jar:\
+component.classpath      = ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
@@ -35,8 +34,7 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/xalan-2.7.1.jar
 
 # Used by TestNG suite that tests the absence of classes from mdbtools-java.jar
-component.cp.no-mdb      = ${artifact.dir}/loci-common.jar:\
-                           ${artifact.dir}/metakit.jar:\
+component.cp.no-mdb      = ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${artifact.dir}/scifio.jar:\
@@ -48,8 +46,7 @@ component.cp.no-mdb      = ${artifact.dir}/loci-common.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from poi-loci.jar
-component.cp.no-poi      = ${artifact.dir}/loci-common.jar:\
-                           ${artifact.dir}/mdbtools-java.jar:\
+component.cp.no-poi      = ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/scifio.jar:\
@@ -61,8 +58,7 @@ component.cp.no-poi      = ${artifact.dir}/loci-common.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from netcdf-4.0.jar
-component.cp.no-netcdf   = ${artifact.dir}/loci-common.jar:\
-                           ${artifact.dir}/mdbtools-java.jar:\
+component.cp.no-netcdf   = ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
