--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -19,7 +19,8 @@ component.classpath      = ${artifact.dir}/loci-common.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-5.11-jdk15.jar:\
+                           ${lib.dir}/turbojpeg.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
