--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -20,7 +20,7 @@ component.classpath      = ${artifact.dir}/loci-common.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar:\
-                           ${lib.dir}/turbojpeg.jar
+                           ${lib.dir}/turbojpeg-1.2.1.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
