--- a/components/bio-formats/build.xml
+++ b/components/bio-formats/build.xml
@@ -95,7 +95,7 @@ Type "ant -p" for a list of targets.
   <target name="gen-structure-table" depends="compile"
     description="generate the dataset structure table">
     <java classname="loci.formats.tools.MakeDatasetStructureTable"
-      args="doc/DatasetStructureTable.wiki"/>
+      args="../../docs/sphinx/dataset-structure-table.txt"/>
   </target>
 
 </project>
