--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -8,7 +8,7 @@
 
 component.name           = bio-formats
 component.jar            = bio-formats.jar
-component.version        = 4.4-DEV
+component.version        = 4.4.5
 component.classpath      = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/metakit.jar:\
