--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -20,7 +20,7 @@ component.classpath      = ${artifact.dir}/loci-legacy.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
@@ -45,7 +45,7 @@ component.cp.no-mdb      = ${artifact.dir}/metakit.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
 
 # Used by TestNG suite that tests the absence of class from poi-loci.jar
 component.cp.no-poi      = ${artifact.dir}/mdbtools-java.jar:\
@@ -57,7 +57,7 @@ component.cp.no-poi      = ${artifact.dir}/mdbtools-java.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
 
 # Used by TestNG suite that tests the absence of class from netcdf-4.0.jar
 component.cp.no-netcdf   = ${artifact.dir}/mdbtools-java.jar:\
@@ -69,4 +69,4 @@ component.cp.no-netcdf   = ${artifact.dir}/mdbtools-java.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-6.8.jar
