--- a/components/bio-formats/build.xml
+++ b/components/bio-formats/build.xml
@@ -23,6 +23,8 @@ Type "ant -p" for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
@@ -38,6 +40,8 @@ Type "ant -p" for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.cp.no-mdb}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
@@ -54,6 +58,8 @@ Type "ant -p" for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.cp.no-netcdf}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
@@ -70,6 +76,8 @@ Type "ant -p" for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.cp.no-poi}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
@@ -84,6 +92,8 @@ Type "ant -p" for a list of targets.
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.runtime-cp}"/>
+        <pathelement path="${lib.dir}/slf4j-log4j12-1.5.10.jar"/>
+        <pathelement path="${lib.dir}/log4j-1.2.15.jar"/>
       </classpath>
       <classfileset file="${test-classes.dir}/loci/formats/utests/MetadataConfigurableTest.class"/>
       <sysproperty key="testng.filename" value="${testng.filename}"/>
