--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -32,8 +32,8 @@ component.resources-text = loci/formats/*.txt
 component.main-class     = loci.formats.gui.ImageViewer
 component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/serializer-2.7.1.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/xalan-2.7.1.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 # Used by TestNG suite that tests the absence of classes from mdbtools-java.jar
 component.cp.no-mdb      = ${artifact.dir}/metakit.jar:\
@@ -44,8 +44,8 @@ component.cp.no-mdb      = ${artifact.dir}/metakit.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 # Used by TestNG suite that tests the absence of class from poi-loci.jar
 component.cp.no-poi      = ${artifact.dir}/mdbtools-java.jar:\
@@ -56,8 +56,8 @@ component.cp.no-poi      = ${artifact.dir}/mdbtools-java.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
 
 # Used by TestNG suite that tests the absence of class from netcdf-4.0.jar
 component.cp.no-netcdf   = ${artifact.dir}/mdbtools-java.jar:\
@@ -68,5 +68,5 @@ component.cp.no-netcdf   = ${artifact.dir}/mdbtools-java.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
+# Omitting due to embedded version  ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
