--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -17,7 +17,7 @@ component.java-version   = 1.5
 component.deprecation    = true
 
 component.resources-bin  = loci/formats/bio-formats-logo.png \
-                           loci/formats/meta/reorder-2008-09.xsl
+                           loci/formats/meta/*.xsl
 component.resources-text = loci/formats/*.txt
 
 component.main-class     = loci.formats.gui.ImageViewer
