--- a/components/bio-formats/pom.xml
+++ b/components/bio-formats/pom.xml
@@ -116,6 +116,9 @@
           <suiteXmlFiles>
             <suiteXmlFile>test/loci/formats/utests/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+          </additionalClasspathElements>
         </configuration>
       </plugin>
       <plugin>
