--- a/components/bio-formats/pom.xml
+++ b/components/bio-formats/pom.xml
@@ -117,7 +117,7 @@
             <suiteXmlFile>test/loci/formats/utests/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
           <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+            <additionalClasspathElement>${basedir}/../../ant/</additionalClasspathElement>
           </additionalClasspathElements>
         </configuration>
       </plugin>
