--- a/components/bio-formats/build.properties
+++ b/components/bio-formats/build.properties
@@ -16,10 +16,10 @@ component.classpath      = ${artifact.dir}/loci-legacy.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${artifact.dir}/scifio.jar:\
                            ${artifact.dir}/scifio-devel.jar:\
+                           ${artifact.dir}/turbojpeg.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/turbojpeg-1.2.1.jar:\
                            ${lib.dir}/testng-6.8.jar
 component.java-version   = 1.5
 component.deprecation    = true
