Remove explicit test group declarations from build.xml
In these cases, we want to run all of the tests no matter what, so there
is no need to declare the group as "all".

--- a/components/bio-formats/build.xml
+++ b/components/bio-formats/build.xml
@@ -18,7 +18,7 @@ Type "ant -p" for a list of targets.
     <!-- NOTE: Overrides default "test" target from java.xml -->
     <copy tofile="${build.dir}/testng.xml" overwrite="true"
       file="${tests.dir}/loci/formats/utests/testng.xml"/>
-    <testng haltonfailure="true" groups="all" testname="${component.name}">
+    <testng haltonfailure="true" testname="${component.name}">
       <classpath>
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
